--- a/layout/page.html
+++ b/layout/page.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" type="text/css" href="{{ base_path }}/css/style.css">
+    <link rel="stylesheet" type="text/css" href="{{ base_path }}/css/custom.css">
+
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/default.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
+    <script>hljs.highlightAll();</script>
 </head>
 
 <body id="{{ slug }}">
@@ -25,15 +30,15 @@
 
 <main>
 {{ content }}
+
 </main>
 
 <footer>
 <section>
-<p>&copy; {{ current_year }} Lorem Ipsum</p>
+<p>&copy; {{ current_year }} ALT F4</p>
 <p>
-    <a href="https://twitter.com/sunainapai">Twitter</a>
-    <a href="https://github.com/sunainapai">GitHub</a>
-    <a href="https://www.example.com/">Example</a>
+    <a href="https://twitter.com/msoup10">Twitter</a>
+    <a href="https://github.com/msoup">GitHub</a>
 </p>
 </section>
 </footer>
