--- a/layout/page.html
+++ b/layout/page.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>{{ title }} - {{ subtitle }}</title>
     <meta charset="UTF-8">
@@ -14,34 +15,49 @@
 
 <body id="{{ slug }}">
 
-<nav>
-<section>
-    <span class="home">
-        <a href="{{ base_path }}/">Home</a>
-    </span>
-    <span class="links">
-        <a href="{{ base_path }}/blog/">Blog</a>
-        <a href="{{ base_path }}/news/">News</a>
-        <a href="{{ base_path }}/contact/">Contact</a>
-        <a href="{{ base_path }}/about/">About</a>
-    </span>
-</section>
-</nav>
+    <nav>
+        <section>
+            <span class="home">
+                <a href="{{ base_path }}/">Home</a>
+            </span>
+            <span class="links">
+                <a href="{{ base_path }}/blog/">Blog</a>
+                <!-- News not needed yet -->
+                <!-- <a href="{{ base_path }}/news/">News</a> -->
+                <a href="{{ base_path }}/contact/">Contact</a>
+                <a href="{{ base_path }}/about/">About</a>
+            </span>
+        </section>
+    </nav>
 
-<main>
-{{ content }}
+    <main>
+        {{ content }}
 
-</main>
+        <section class="about-me">
+            <div class="profile-container">
 
-<footer>
-<section>
-<p>&copy; {{ current_year }} ALT F4</p>
-<p>
-    <a href="https://twitter.com/msoup10">Twitter</a>
-    <a href="https://github.com/msoup">GitHub</a>
-</p>
-</section>
-</footer>
+                <img class="profile-shadow" src="https://i.pravatar.cc/75" />
+
+            </div>
+            <p>I'm Daven, a Canadian teacher turned software engineer.</p>
+            <p>This is my personal blog where I write about my thoughts on topics mostly related to learning, tech and
+                software
+                engineering.</p>
+            <p>Contact me at davenlu1989 at gmail dot com</p>
+        </section>
+    </main>
+
+
+    <footer>
+        <section>
+            <p>&copy; {{ current_year }} ALT F4</p>
+            <p>
+                <a id="twitter-link" href="https://twitter.com/msoup10">Twitter</a>
+                <a id="github-link" href="https://github.com/msoup">GitHub</a>
+            </p>
+        </section>
+    </footer>
 
 </body>
+
 </html>
