--- a/layout/page.html
+++ b/layout/page.html
@@ -5,7 +5,7 @@
     <title>{{ title }} - {{ subtitle }}</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" type="text/css" href="{{ base_path }}/makesite/css/style.css">
+    <link rel="stylesheet" type="text/css" href="{{ base_path }}/css/style.css">
     <link rel="stylesheet" type="text/css" href="{{ base_path }}/css/custom.css">
 
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/default.min.css">
